commit at 9:26PM, buy business plan added

--- a/laravel/resources/views/index.html
+++ b/laravel/resources/views/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <Hatchling Plan>Document</Hatchling Plan>
   <link rel="stylesheet" href="./styles/home.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="./Componets/menu/menu.css">
@@ -22,7 +22,7 @@
   <nav class="items-center w-screen place-content-around  text-sm nav-holder">
     <div class="top-div">
       <div class="logo-holder">
-        <img src="./../../assets/logo/lamids.png" alt="Logo" class="w-full">
+        <img src="./assets/logo/lamids.png" alt="Logo" class="w-full">
       </div>
 
       <button class="menu-icon">
@@ -80,6 +80,148 @@
     </div>
 
   </section>
+
+  
+  <section class="w-full business-card-scroll-container my-12 flex   items-center">
+    <section class="business-card-holder  item-center h-full flex ">
+
+        <div class="card flex flex-col justify-between">
+            <div>
+                <p class="card-Hatchling Plan">Hatchling Plan</p>
+                <p class="discount">Now 60% off!</p>
+                <ul class="card-list">
+                    <li>Unmetered bandwidth</li>
+                    <li>Free SSL certificate </li>
+                    <li>Single website</li>
+                  
+                   
+                </ul>
+            </div>
+
+            <div>
+                <p class="card-price">$2.75/month</p>
+
+                <button class="buy-btn w-full">Buy now</button>
+            </div>
+        </div>
+
+        <div class="card flex flex-col justify-between">
+            <div>
+                <p class="card-Hatchling Plan">Hatchling Plan</p>
+                <p class="discount">Now 60% off!</p>
+                <ul class="card-list">
+                    <li>Unmetered bandwidth</li>
+                    <li>Free SSL certificate </li>
+                    <li>Single website</li>
+                    <li>Free WordPress/cPanel website transfer </li>
+                    <li>Free domain included</li>
+            </div>
+
+            <div>
+                <p class="card-price">$2.75/month</p>
+
+                <button class="buy-btn w-full">Buy now</button>
+            </div>
+        </div>
+
+        <div class="card flex flex-col justify-between">
+          <div>
+              <p class="card-Hatchling Plan">Hatchling Plan</p>
+              <p class="discount">Now 60% off!</p>
+              <ul class="card-list">
+                  <li>Unmetered bandwidth</li>
+                  <li>Free SSL certificate </li>
+                  <li>Single website</li>
+                  <li>Free WordPress/cPanel website transfer </li>
+                  <li>Free domain included</li>
+          </div>
+
+          <div>
+              <p class="card-price">$2.75/month</p>
+
+              <button class="buy-btn w-full">Buy now</button>
+          </div>
+      </div>
+
+      <div class="card flex flex-col justify-between">
+        <div>
+            <p class="card-Hatchling Plan">Hatchling Plan</p>
+            <p class="discount">Now 60% off!</p>
+            <ul class="card-list">
+                <li>Unmetered bandwidth</li>
+                <li>Free SSL certificate </li>
+                <li>Single website</li>
+                <li>Free WordPress/cPanel website transfer </li>
+                <li>Free domain included</li>
+        </div>
+
+        <div>
+            <p class="card-price">$2.75/month</p>
+
+            <button class="buy-btn w-full">Buy now</button>
+        </div>
+    </div>
+
+    <div class="card flex flex-col justify-between">
+      <div>
+          <p class="card-Hatchling Plan">Hatchling Plan</p>
+          <p class="discount">Now 60% off!</p>
+          <ul class="card-list">
+              <li>Unmetered bandwidth</li>
+              <li>Free SSL certificate </li>
+              <li>Single website</li>
+              <li>Free WordPress/cPanel website transfer </li>
+              <li>Free domain included</li>
+      </div>
+
+      <div>
+          <p class="card-price">$2.75/month</p>
+
+          <button class="buy-btn w-full">Buy now</button>
+      </div>
+  </div>
+
+  <div class="card flex flex-col justify-between">
+    <div>
+        <p class="card-Hatchling Plan">Hatchling Plan</p>
+        <p class="discount">Now 60% off!</p>
+        <ul class="card-list">
+            <li>Unmetered bandwidth</li>
+            <li>Free SSL certificate </li>
+            <li>Single website</li>
+            <li>Free WordPress/cPanel website transfer </li>
+            <li>Free domain included</li>
+    </div>
+
+    <div>
+        <p class="card-price">$2.75/month</p>
+
+        <button class="buy-btn w-full">Buy now</button>
+    </div>
+</div>
+
+<div class="card flex flex-col justify-between">
+  <div>
+      <p class="card-Hatchling Plan">Hatchling Plan</p>
+      <p class="discount">Now 60% off!</p>
+      <ul class="card-list">
+          <li>Unmetered bandwidth</li>
+          <li>Free SSL certificate </li>
+          <li>Single website</li>
+          <li>Free WordPress/cPanel website transfer </li>
+          <li>Free domain included</li>
+  </div>
+
+  <div>
+      <p class="card-price">$2.75/month</p>
+
+      <button class="buy-btn w-full">Buy now</button>
+  </div>
+</div>
+
+
+    </section>
+</section>
 
   <section class="section-2 flex text-white justify-around items-center rounded-lg py-16 px-5">
     <div class="w-1/2 flex flex-col justify-around input-holder-div">
