--- a/laravel/resources/views/contactus.html
+++ b/laravel/resources/views/contactus.html
@@ -25,7 +25,7 @@
     <nav class="items-center w-screen place-content-around  text-sm nav-holder">
         <div class="top-div">
             <div class="logo-holder">
-                <img src="./../../assets/logo/lamids.png" alt="Logo" class="w-full">
+                <img src="./assets/logo/lamids.png" alt="Logo" class="w-full">
             </div>
 
             <button class="menu-icon">
@@ -66,8 +66,8 @@
     </nav>
     <div class="contact-us-top  w-full flex sm:flex-rol justify-center item-center" style="height: 70vh;">
         <div class="w-1/2  flex justify-center item-center flex-col p-10 sm:h-full">
-            <p class="title-header">Contact us</p>
-            <p class="normal-text">
+            <p class="title-header sm:text-center">Contact us</p>
+            <p class="normal-text sm:text-center">
                 LAMID Consulting provides you with the necessary support <br> you need to grow and achieve the desired
                 dream.
             </p>
