--- a/laravel/resources/views/insight.html
+++ b/laravel/resources/views/insight.html
@@ -24,7 +24,7 @@
     <nav class="items-center w-screen place-content-around  text-sm nav-holder">
         <div class="top-div">
             <div class="logo-holder">
-                <img src="./../../assets/logo/lamids.png" alt="Logo" class="w-full">
+                <img src="./assets/logo/lamids.png" alt="Logo" class="w-full">
             </div>
 
             <button class="menu-icon">
