--- a/laravel/resources/views/contactus.html
+++ b/laravel/resources/views/contactus.html
@@ -35,16 +35,19 @@
 
         <div id="menuList" class="list-holder-top">
             <ul class="text-white flex place-content-around items-center menu-list">
-                <li class="p-5">
+                <li class="p-5 ">
                     <a href="index.html">Home</a>
                 </li>
                 <li class="p-5">
                     <a href="#">Talent management</a>
                 </li>
                 <li class="p-5">
+                    <a href="events.html">Events</a>
+                </li>
+                <li class="p-5">
                     <a href="insight.html">Insights</a>
                 </li>
-                <li class="p-5 active-menu-item">
+                <li class="p-5  active-menu-item">
                     <a href="contactus.html">Contact</a>
                 </li>
             </ul>
