--- a/laravel/resources/views/insight.html
+++ b/laravel/resources/views/insight.html
@@ -34,11 +34,14 @@
 
         <div id="menuList" class="list-holder-top">
             <ul class="text-white flex place-content-around items-center menu-list">
-                <li class="p-5">
+                <li class="p-5 ">
                     <a href="index.html">Home</a>
                 </li>
                 <li class="p-5">
                     <a href="#">Talent management</a>
+                </li>
+                <li class="p-5">
+                    <a href="events.html">Events</a>
                 </li>
                 <li class="p-5 active-menu-item">
                     <a href="insight.html">Insights</a>
