--- a/laravel/public/styles/insight.css
+++ b/laravel/public/styles/insight.css
@@ -105,7 +105,7 @@ body{
 }
 
 .page-card-holder{
-    width: 100vw;
+    width: 100% !important;
 }
 
 .card-outline{
@@ -121,5 +121,9 @@ body{
 .details{
     font-weight: 100;
     font-size: 15px;
+}
+
+.page-holder{
+    width: 100vw;
 }
 }
