--- a/laravel/public/styles/home.css
+++ b/laravel/public/styles/home.css
@@ -241,6 +241,18 @@ margin: .5rem 0px;
 }
 
 
+.search-btn{
+    background:#fff;
+    color: #D3202E !important;
+   
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+}
+
+
 
 @media (max-width: 900px) { 
     .section-1{
@@ -275,6 +287,7 @@ margin: .5rem 0px;
         text-shadow: 0px 2px 4px #000000ee;
     }
 
+ 
 
     .section-1{
         flex-direction: column;
