--- a/laravel/resources/views/newbiz.html
+++ b/laravel/resources/views/newbiz.html
@@ -26,7 +26,7 @@
     </nav>
     <div class="absection1-biz">
         <div class="biz-sub">
-            <div class="logo-biz">
+            <div class="logo-biz hide-mobile">
                 <img src="../../public/img/logo (1).png" alt="">
             </div>
             <div class="biz-top-holder">
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="section-1-icons">
-            <ul>
+            <ul class="small-icon">
                 <li>
                     <div class="full-biz-img">
                         <img src="../../public//img/Group 93 (1).png" alt="">
@@ -76,7 +76,7 @@
 
                 </li>
                 <li>
-                    <div>
+                    <div class="small-img">
                         <img src="../../public//img/Polygon 13.png" alt="">
                     </div>
                     <p>BIZshpere</p>
@@ -135,26 +135,141 @@
             with the right skills and expertise to work with you and your business at nominal periodic retention fees.
         </p>
     </div>
-
     <div class="tie-and-die">
-     <div class="tnd">
-        <div class="biz-top-holder">
-            <div class="biz-text center-div">
-                <h1 class="left-text-align big-red-2">BUSINESS PLANS</h1>
-                <p class="biz-text-one">
-                    Managing a successful business might be such a herculean task,
-                    from not having enough cash, experience, connection to fear,
-                    not knowing where to start, dealing with competition and a lot more,
-                    choose from our arrays of guides to help you kickstart your dream!
+        <div class="tnd">
+            <div class="biz-top-holder">
+                <div class="biz-text center-div">
+                    <h1 class="left-text-align big-red-2">BUSINESS PLANS</h1>
+                    <p class="biz-text-one">
+                        Managing a successful business might be such a herculean task,
+                        from not having enough cash, experience, connection to fear,
+                        not knowing where to start, dealing with competition and a lot more,
+                        choose from our arrays of guides to help you kickstart your dream!
 
-                </p>
-                <button class="custom-btn-ab-1 PADDED">SHOP</button>
-            </div>
-            <div class="biz-img">
-                <img src="../../public/img/TIE & DIE BUSINESS PLAN IMAGE 1.png" alt="biz-img" srcset="">
+                    </p>
+                    <button class="custom-btn-ab-1 PADDED">SHOP</button>
+                </div>
+                <div class="biz-img">
+                    <img src="../../public/img/TIE & DIE BUSINESS PLAN IMAGE 1.png" alt="biz-img" srcset="">
+                </div>
             </div>
         </div>
-     </div>
+    </div>
+    <div class="bzdark">
+        <div class="inside-bzdaark">
+            <div class="flexed gapped">
+                <div class="bizcard-white">
+                    <h2>BIZ for Market Access</h2>
+
+                    <p>
+                        We handhold SMEs to find their niche and access and dominate the market with lasting brands; We
+                        show effective ways to drive lead generation and create conversions BIZ builds the entrepreneur
+                        and the enterprise capacity for a timely response to market opportunities, and propels them
+                        along a sustainable pathway; BIZ uses data to activate a culture of continuous innovation in the
+                        entrepreneur and the enterprise resulting in sustained and raving customers.
+                    </p>
+                </div>
+                <div class="bizcard-red">
+                    <h2>BIZ for Finance Access</h2>
+
+                    <p>
+                        A cost affordable option to address the structural deficiencies that create lack of access to
+                        finance and other support resources that are critical to success, creates strong partnerships
+                        with financial institutions to facilitate and package businesses to access easier and
+                        appropriate, least cost growth finance We support SME financing with banks by monitoring
+                        enterprises to successfully utilize appropriate financing according to plans.
+                    </p>
+                </div>
+            </div>
+
+            <div class="dotted-image">
+                <img src="../../public/img/busiess guides.png" alt="">
+            </div>
+
+            <p>
+                BIZ uses the triple bottom line approach to integrate and position start-ups to bridge the wealth
+                creation divide and re-set globalization through innovation and job creation.
+            </p>
+
+            <div class="dkbottom">
+                <div class="dkbottom-img">
+                    <img src="../../public//img/Rectangle 139.png" alt="">
+                </div>
+                <p>
+                    BIZphere offers the platform for increased B2B, B2C trade and investment; to meet, network, and
+                    exchange
+                    ideas and information for continuous innovation and It is backed by a state-of the-art information
+                    highway and BEST knowledge portal.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="bzsection4">
+        <p>
+            BIZ uses our well-proven entrepreneurship management expertise with the boutique resources from our digital
+            marketing and networking space to build trust in our client’s business structure, systems and processes .
+        </p>
+
+        <div>
+            <div>
+                <ul>
+                    <li>
+                        <p>
+                            One factor that motivates us and ensures that we continually raise the bar and improve
+                            on industry standards is what clients say about us. They appreciate our ability to
+                        </p>
+                    </li>
+
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <p>
+                            We provide a service that does not leave a significant cost on your balance sheet. We
+                            have worked with companies from Start Up to $2bill, locally, nationally, and
+                            internationally.
+                        </p>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+
+        <div class="biz-card">
+            <img src="../../public//img/Group 99.png" alt="">
+        </div>
+
+        <div class="gapped">
+            <button class="custom-btn-ab-1">ABOUT US</button>
+            <button class="custom-btn-ab-2">JOIN BIZ CLUB</button>
+            <button class="custom-btn-ab-1">SEE EVENTS</button>
+        </div>
+    </div>
+    <div class="black-bottom">
+        <div class="black-bottom-img">
+            <img src="../../public//img/Group 211.png" alt="">
+        </div>
+
+        <div class="biz-card">
+            <img src="../../public//img/Group 207.png" alt="">
+        </div>
+    </div>
+
+    <div class="wht-bttom">
+        <div class="div-holder-ii sm-scl gapped">
+            <div class="img-holder">
+                <img src="../../public/img/WECAN HELP.png" alt="img">
+            </div>
+            <div class="left-text">
+                <p> To request a</p>
+                <p> <b>Business Advisor,</b> contact:</p>
+                <p class="red-text"> <b>crm@lamidconsulting.com +2347026228801</b></p>
+                <button class="custom-btn-1">GET FREE CONSULTATION</button>
+            </div>
+
+
+        </div>
     </div>
     <section class="down-grid">
         <div class="inner-down-grid-holder">
