--- a/laravel/public/styles/newbiz.css
+++ b/laravel/public/styles/newbiz.css
@@ -814,10 +814,10 @@ border-right: 5px solid #C12129;
         display: flex;
         justify-content: center;
         align-items: center;
-        -webkit-border-radius:;
-        -moz-border-radius:;
-        -ms-border-radius:;
-        -o-border-radius:;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        -ms-border-radius: 20px;
+        -o-border-radius: 20px;
 }
     
     .red-text{
